# -

./: 123456789  123456789.pub  Web试题.docx  日报.txt
C++/: CMakeLists.txt  main.cpp
CMake/: CMakeLists.txt  main.cpp
JS插件开发/.metadata/: version.ini
JS插件开发/filesystem/: .project  com.huawei.filesystem_debug.app  com.huawei.filesystem_release.app  manifest.json
JS插件开发/filesystem/.bin/: index.html
JS插件开发/filesystem/css/: base.css
JS插件开发/filesystem/js/: GeoBOS.min.js  index.js
JS插件开发/filesystem_plugin/jni/: emss.mk  (+1 more)
JS插件开发/test-linux/: CMakeLists.txt  main.cpp
JS插件开发/文档/: API文档.md  用例图.vsd  程序逻辑图.vsd  类图.vsd  软件详细设计.docx  软件需求报告.docx
web/.metadata/: version.ini
web/IDCardDiscern/: .project  .tern-project  com.example.idcarddiscern_debug.app  com.example.idcarddiscern_release.app  index.html
web/calculator/: .project  com.huawei.helloemss_debug.app  com.huawei.helloemss_release.app  index.html
web/hello/: .project  com.example.fs_debug.app  com.example.fs_release.app  index.html  plugin_manifest.json
web/test1/: .project  com.example.test1_debug.app  com.example.test1_release.app  index.html
web/test2/: .project  com.example.test2_debug.app  com.example.test2_release.app  index.html  manifest.json  plugin_manifest.json
web/test3/: .project  index.html
web/test4/: index.html
web/test5/: index.html
web/test6/: .project  com.example.test6_debug.app  com.example.test6_release.app  index.html  manifest.json
web/videoplay/: .project  .tern-project  index.html  manifest.json
web/视频播放器/: index.html
前端/: script.js  test.html
汇报/: 周报.ppt  绘图1.vsd
(+167 files in other folders)
